fix vapoursynth library cmake find

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -835,13 +835,16 @@ if(ENABLE_CLI)
                           output/raw.cpp)               # muxers
 if(ENABLE_VPYSYNTH AND ENABLE_CLI)
     find_package(Vapoursynth)
-    if(GCC)
-        set_source_files_properties(input/input.cpp input/vpy.cpp PROPERTIES COMPILE_OPTIONS "-std=gnu++11")
-    elseif(MSVC_VERSION GREATER_EQUAL "1900")
-        include(CheckCXXCompilerFlag)
-        CHECK_CXX_COMPILER_FLAG("/std:c++11" _cpp_latest_flag_supported)
-        if (_cpp_latest_flag_supported)
-            set_source_files_properties(input/input.cpp input/vpy.cpp PROPERTIES COMPILE_OPTIONS "/std:c++11")
+    if (VAPOURSYNTH_FOUND)
+        include_directories(${VS_INCLUDE_DIR})
+        if(GCC)
+            set_source_files_properties(input/input.cpp input/vpy.cpp PROPERTIES COMPILE_OPTIONS "-std=gnu++11")
+        elseif(MSVC_VERSION GREATER_EQUAL "1900")
+            include(CheckCXXCompilerFlag)
+            CHECK_CXX_COMPILER_FLAG("/std:c++11" _cpp_latest_flag_supported)
+            if (_cpp_latest_flag_supported)
+                set_source_files_properties(input/input.cpp input/vpy.cpp PROPERTIES COMPILE_OPTIONS "/std:c++11")
+            endif()
         endif()
     endif()
 endif()
