avisynth find support

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -861,6 +861,10 @@ endif()
         list(APPEND InputFiles input/lavf.cpp)
     endif()
     if(ENABLE_AVISYNTH)
+        find_package(AviSynth)
+        if (AVISYNTH_FOUND)
+            include_directories(${AVIS_INCLUDE_DIR})
+        endif()
         list(APPEND InputFiles input/avs.cpp)
     endif()
     if(ENABLE_VPYSYNTH)
