fix lsmash dependencies.

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -38,10 +38,13 @@ configure_file("${PROJECT_SOURCE_DIR}/x265_config.h.in"
 SET(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake" "${CMAKE_MODULE_PATH}")
 
 # Add option to specify lsmash source directory
-option(SPECIFY_LSMASH_SOURCE_DIR "Specify the source directory of L-SMASH" OFF)
+option(SPECIFY_LSMASH_SOURCE_DIR "Specify the source directory of L-SMASH. You may clone a repo from https://github.com/l-smash/l-smash" OFF)
+set(LSMASH_SOURCE_DIR lsmash CACHE STRING "The source directory of L-SMASH")
 if(SPECIFY_LSMASH_SOURCE_DIR)
     set(LSMASH_SOURCE_DIR lsmash CACHE STRING "The source directory of L-SMASH")
+    set(LSMASH_LIB_DIR lsmash CACHE STRING "The lib directory of L-SMASH")
     include_directories(${LSMASH_SOURCE_DIR})
+    link_directories(${LSMASH_LIB_DIR})
 endif()
 
 # System architecture detection
@@ -83,7 +86,7 @@ elseif(ARMMATCH GREATER "-1")
     else()
         set(CROSS_COMPILE_ARM 0)
     endif()
-	message(STATUS "Detected ARM target processor")
+    message(STATUS "Detected ARM target processor")
     set(ARM 1)
     add_definitions(-DX265_ARCH_ARM=1 -DHAVE_ARMV6=1)
 elseif(ARM64MATCH GREATER "-1")
@@ -263,7 +266,7 @@ if(GCC)
     endif()
     if(ARM AND CROSS_COMPILE_ARM)
         message(STATUS "cross compile arm")
-		set(ARM_ARGS -march=armv6 -mfloat-abi=soft -mfpu=vfp -marm -fPIC)
+        set(ARM_ARGS -march=armv6 -mfloat-abi=soft -mfpu=vfp -marm -fPIC)
     elseif(ARM)
         find_package(Neon)
         if(CPU_HAS_NEON)
@@ -273,8 +276,8 @@ if(GCC)
             set(ARM_ARGS -mcpu=native -mfloat-abi=hard -mfpu=vfp -marm)
         endif()
     endif()
-	if(ARM64 OR CROSS_COMPILE_ARM64)
-	    set(ARM_ARGS -fPIC -flax-vector-conversions)
+    if(ARM64 OR CROSS_COMPILE_ARM64)
+        set(ARM_ARGS -fPIC -flax-vector-conversions)
         find_package(Neon)
         if(CPU_HAS_NEON)
             add_definitions(-DHAVE_NEON)
@@ -569,7 +572,7 @@ if((MSVC_IDE OR XCODE OR GCC) AND ENABLE_ASSEMBLY)
     # compile ARM arch asm files here
         enable_language(ASM)
         foreach(ASM ${ARM_ASMS})
-			set(ASM_SRC ${CMAKE_CURRENT_SOURCE_DIR}/common/arm/${ASM})
+            set(ASM_SRC ${CMAKE_CURRENT_SOURCE_DIR}/common/arm/${ASM})
             list(APPEND ASM_SRCS ${ASM_SRC})
             list(APPEND ASM_OBJS ${ASM}.${SUFFIX})
             add_custom_command(
@@ -578,7 +581,7 @@ if((MSVC_IDE OR XCODE OR GCC) AND ENABLE_ASSEMBLY)
                 ARGS ${ARM_ARGS} -c ${ASM_SRC} -o ${ASM}.${SUFFIX}
                 DEPENDS ${ASM_SRC})
         endforeach()
-	elseif(ARM64 OR CROSS_COMPILE_ARM64)
+    elseif(ARM64 OR CROSS_COMPILE_ARM64)
     # compile ARM64 arch asm files here
         enable_language(ASM)
         foreach(ASM ${ARM_ASMS})
@@ -789,7 +792,7 @@ endif(MSVC)
 option(ENABLE_LSMASH "Enable L-SMASH muxer" OFF)
 if(ENABLE_LSMASH)
     add_definitions(-DENABLE_LSMASH)
-    list(APPEND PLATFORM_LIBS lsmash)
+    list(APPEND PLATFORM_LIBS liblsmash)
 endif(ENABLE_LSMASH)
 
 option(ENABLE_MKV "Enable Haali Matroska muxer" OFF)
