--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -38,11 +38,11 @@ configure_file("${PROJECT_SOURCE_DIR}/x265_config.h.in"
 SET(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake" "${CMAKE_MODULE_PATH}")
 
 # Add option to specify lsmash source directory
-option(SPECIFY_LSMASH_SOURCE_DIR "Specify the source directory of L-SMASH. You may clone a repo from https://github.com/l-smash/l-smash" OFF)
+option(SPECIFY_LSMASH_SOURCE_DIR "Specify the source directory of L-SMASH. You may clone a repo from https://github.com/l-smash/l-smash" ON)
 set(LSMASH_SOURCE_DIR lsmash CACHE STRING "The source directory of L-SMASH")
 if(SPECIFY_LSMASH_SOURCE_DIR)
-    set(LSMASH_SOURCE_DIR lsmash CACHE STRING "The source directory of L-SMASH")
-    set(LSMASH_LIB_DIR lsmash CACHE STRING "The lib directory of L-SMASH")
+    set(LSMASH_SOURCE_DIR E:/git/l-smash CACHE STRING "The source directory of L-SMASH")
+    set(LSMASH_LIB_DIR E:/git/l-smash/x64/Release CACHE STRING "The lib directory of L-SMASH")
     include_directories(${LSMASH_SOURCE_DIR})
     link_directories(${LSMASH_LIB_DIR})
 endif()
@@ -215,7 +215,7 @@ if(CC STREQUAL "xlc")
     add_definitions(-qinline=level=10 -qpath=IL:/data/video_files/latest.tpo/)
 endif()
 # this option is to enable the inclusion of dynamic HDR10 library to the libx265 compilation
-option(ENABLE_HDR10_PLUS "Enable dynamic HDR10 compilation" OFF)
+option(ENABLE_HDR10_PLUS "Enable dynamic HDR10 compilation" ON)
 option(ENABLE_AVISYNTH "Enable AviSynth input" ON)
 option(ENABLE_VPYSYNTH "Enable VapourSynth input" ON)
 if(MSVC AND (MSVC_VERSION LESS 1800) AND ENABLE_HDR10_PLUS)
@@ -435,7 +435,7 @@ if (ENABLE_HDR10_PLUS)
     add_definitions(-DENABLE_HDR10_PLUS)
 endif(ENABLE_HDR10_PLUS)
 
-option(ENABLE_SVT_HEVC "Enable SVT HEVC Encoder" OFF)
+option(ENABLE_SVT_HEVC "Enable SVT HEVC Encoder" ON)
 if(ENABLE_SVT_HEVC)
     find_package(svthevc)
     if(SVTHEVC_FOUND)
@@ -524,7 +524,7 @@ endif()
 include(Version) # determine X265_VERSION and X265_LATEST_TAG
 include_directories(. common encoder "${PROJECT_BINARY_DIR}")
 
-option(ENABLE_PPA "Enable PPA profiling instrumentation" OFF)
+option(ENABLE_PPA "Enable PPA profiling instrumentation" ON)
 if(ENABLE_PPA)
     add_definitions(-DENABLE_PPA)
     list(APPEND PLATFORM_LIBS PPA)
@@ -534,7 +534,7 @@ if(ENABLE_PPA)
     add_subdirectory(profile/PPA)
 endif(ENABLE_PPA)
 
-option(ENABLE_VTUNE "Enable Vtune profiling instrumentation" OFF)
+option(ENABLE_VTUNE "Enable Vtune profiling instrumentation" ON)
 if(ENABLE_VTUNE)
     find_package(Vtune)
     if(VTUNE_FOUND)
@@ -789,7 +789,7 @@ if(MSVC)
 endif(MSVC)
 
 # CLI-specific option here
-option(ENABLE_LSMASH "Enable L-SMASH muxer" OFF)
+option(ENABLE_LSMASH "Enable L-SMASH muxer" ON)
 if(ENABLE_LSMASH)
     add_definitions(-DENABLE_LSMASH)
     list(APPEND PLATFORM_LIBS liblsmash)
