update for lsmash build

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -39,12 +39,13 @@ SET(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake" "${CMAKE_MODULE_PATH}")
 
 # Add option to specify lsmash source directory
 option(SPECIFY_LSMASH_SOURCE_DIR "Specify the source directory of L-SMASH. You may clone a repo from https://github.com/l-smash/l-smash" ON)
-set(LSMASH_SOURCE_DIR lsmash CACHE STRING "The source directory of L-SMASH")
 if(SPECIFY_LSMASH_SOURCE_DIR)
     set(LSMASH_SOURCE_DIR E:/git/l-smash CACHE STRING "The source directory of L-SMASH")
     set(LSMASH_LIB_DIR E:/git/l-smash/x64/Release CACHE STRING "The lib directory of L-SMASH")
     include_directories(${LSMASH_SOURCE_DIR})
     link_directories(${LSMASH_LIB_DIR})
+else()
+    set(LSMASH_SOURCE_DIR lsmash CACHE STRING "The source directory of L-SMASH")
 endif()
 
 # System architecture detection
@@ -836,21 +837,21 @@ if(ENABLE_CLI)
                           output/yuv.cpp output/y4m.cpp # recon
                           output/gop.cpp
                           output/raw.cpp)               # muxers
-if(ENABLE_VPYSYNTH AND ENABLE_CLI)
-    find_package(Vapoursynth)
-    if (VAPOURSYNTH_FOUND)
-        include_directories(${VS_INCLUDE_DIR})
-        if(GCC)
-            set_source_files_properties(input/input.cpp input/vpy.cpp PROPERTIES COMPILE_OPTIONS "-std=gnu++11")
-        elseif(MSVC_VERSION GREATER_EQUAL "1900")
-            include(CheckCXXCompilerFlag)
-            CHECK_CXX_COMPILER_FLAG("/std:c++11" _cpp_latest_flag_supported)
-            if (_cpp_latest_flag_supported)
-                set_source_files_properties(input/input.cpp input/vpy.cpp PROPERTIES COMPILE_OPTIONS "/std:c++11")
+    if(ENABLE_VPYSYNTH)
+        find_package(Vapoursynth)
+        if (VAPOURSYNTH_FOUND)
+            include_directories(${VS_INCLUDE_DIR})
+            if(GCC)
+                set_source_files_properties(input/input.cpp input/vpy.cpp PROPERTIES COMPILE_OPTIONS "-std=gnu++11")
+            elseif(MSVC_VERSION GREATER_EQUAL "1900")
+                include(CheckCXXCompilerFlag)
+                CHECK_CXX_COMPILER_FLAG("/std:c++11" _cpp_latest_flag_supported)
+                if (_cpp_latest_flag_supported)
+                    set_source_files_properties(input/input.cpp input/vpy.cpp PROPERTIES COMPILE_OPTIONS "/std:c++11")
+                endif()
             endif()
         endif()
     endif()
-endif()
     file(GLOB FilterFiles filters/*.cpp filters/*.h)
     source_group(filters FILES ${FilterFiles})
     source_group(input FILES ${InputFiles})
