add readme to tell how to build

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -40,8 +40,8 @@ SET(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake" "${CMAKE_MODULE_PATH}")
 # Add option to specify lsmash source directory
 option(SPECIFY_LSMASH_SOURCE_DIR "Specify the source directory of L-SMASH. You may clone a repo from https://github.com/l-smash/l-smash" ON)
 if(SPECIFY_LSMASH_SOURCE_DIR)
-    set(LSMASH_SOURCE_DIR E:/git/l-smash CACHE STRING "The source directory of L-SMASH")
-    set(LSMASH_LIB_DIR E:/git/l-smash/x64/Release CACHE STRING "The lib directory of L-SMASH")
+    set(LSMASH_SOURCE_DIR $ENV{LSMASH_ROOT} CACHE STRING "The source directory of L-SMASH")
+    set(LSMASH_LIB_DIR $ENV{LSMASH_ROOT}/x64/Release CACHE STRING "The lib directory of L-SMASH")
     include_directories(${LSMASH_SOURCE_DIR})
     link_directories(${LSMASH_LIB_DIR})
 else()
